syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (AuthResponse);
  rpc Login (LoginRequest) returns (TokensResponse);
  rpc Refresh (RefreshRequest) returns (TokensResponse);
  rpc Logout (LogoutRequest) returns (Empty);
  rpc VerifyEmail (VerifyEmailRequest) returns (AuthResponse);
  rpc RequestPasswordReset (RequestPasswordResetRequest) returns (AuthResponse);
  rpc ResetPassword (ResetPasswordRequest) returns (AuthResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message LogoutRequest {
  int32 userId = 1;
}

message VerifyEmailRequest {
  string token = 1;
}

message RequestPasswordResetRequest {
  string email = 1;
}

message ResetPasswordRequest {
  string email = 1;
  string otp = 2;
  string newPassword = 3;
}

message AuthResponse {
  string message = 1;
}

message TokensResponse {
  string accessToken = 1;
  string refreshToken = 2;
}

message Empty {}
